2012-02-01  Nándor Huszka  <huszka.nandor@stud.u-szeged.hu>

        [Qt] Automatic clean build feature always do clean build with --no-webkit2
        https://bugs.webkit.org/show_bug.cgi?id=74519

        Reviewed by Tor Arne Vestbø.

        Set the PLUGIN_ARCHITECTURE_UNSUPPORTED define always.

        * qmake/mkspecs/features/features.prf:

2012-02-01  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

        [Qt][WK2] run-webkit-tests --qt  crashes if WEBKIT_TESTFONTS is not set
        https://bugs.webkit.org/show_bug.cgi?id=77466

        Reviewed by Kenneth Rohde Christiansen.

        Replicate the behavior of old-run-webkit-tests and check if WEBKIT_TESTFONTS
        is set or if we should raise an error.

        * Scripts/webkitpy/layout_tests/port/qt.py:
        (QtPort.setup_environ_for_server):

2012-02-01  Philippe Normand  <pnormand@igalia.com> and Sergio Villar Senin  <svillar@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Improve FrameLoader signals. Resource loading
        https://bugs.webkit.org/show_bug.cgi?id=49543

        Support for the new loader signals in DRT.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (urlPath):
        (willSendRequestCallback):
        (urlSuitableForTestResult):
        (descriptionSuitableForTestResult):
        (didReceiveResponse):
        (didFinishLoading):
        (didFailLoadingWithError):
        (createWebView):

2012-02-01  Ryosuke Niwa  <rniwa@webkit.org>

        run-perf-tests should restart DRT for each test
        https://bugs.webkit.org/show_bug.cgi?id=77506

        Reviewed by Adam Barth.

        Always restart DRT when running performance tests in order to minimize the dependency between tests.

        * Scripts/webkitpy/layout_tests/port/chromium.py:
        (ChromiumDriver.stop):
        * Scripts/webkitpy/performance_tests/perftestsrunner.py:
        (PerfTestsRunner._run_tests_set):
        (PerfTestsRunner._run_single_test):