@@ -1,3 +1,14 @@
+2012-02-01  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r106460.
+        http://trac.webkit.org/changeset/106460
+        https://bugs.webkit.org/show_bug.cgi?id=77552
+
+        It break unit tests if WEBKIT_TESTFONTS isn't defined.
+        (Requested by Ossy on #webkit).
+
+        * Scripts/webkitpy/layout_tests/port/qt.py:
+
 2012-02-01  Nándor Huszka  <huszka.nandor@stud.u-szeged.hu>
 
         [Qt] Automatic clean build feature always do clean build with --no-webkit2
